# cocaine-core

./: .gitignore  .gitmodules  .pullapprove  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Dockerfile  LICENSE  README  README.md  TODO  build.sh  cocaine-bf.spec  config.hpp.in  heartbeats_collector_iface.hpp  libcocaine-core3.version  sconstruct  valgrind.sh
clients/: CMakeLists.txt  sconscript
clients/c++/: client.cpp  client.hpp  sconscript
clients/cxx/: CMakeLists.txt  client.cpp  client.hpp
clients/python/: sconscript  yappi.py
cmake/: locate_library.cmake
cmake/Modules/: FindMongoDB.cmake
debian/: changelog  cocaine-core.default  cocaine-core.dirs  cocaine-core.init.d  cocaine-core.install  cocaine-core.links  cocaine-core.logrotate  cocaine-core.postinst  cocaine-core.postrm  cocaine-dealer.install  cocaine-dev.install  cocaine-dev.links  cocaine-generic-slave.install  cocaine-plugin-binary.install  cocaine-plugin-elliptics.install  cocaine-plugin-javascript.install  cocaine-plugin-mongodb.install  cocaine-plugin-perl.install  cocaine-plugin-python.install  cocaine-runtime.conf  cocaine-runtime.default  cocaine-runtime.dirs  cocaine-runtime.init  cocaine-runtime.install  cocaine-runtime.postinst  cocaine-runtime.postrm  cocaine-server.conf  cocaine-server.default  cocaine-server.dirs  cocaine-server.init.d  cocaine-server.install  cocaine-server.postinst  cocaine-tools.install  cocaine-v12-runtime.default  cocaine-v12-runtime.init  control  copyright  libcocaine-common2.install  libcocaine-core2.install  libcocaine-dealer-dev.install  (+5 more)
docker/: Dockerfile
fedora/: cocaine-runtime.service  cocaine-runtime.tmpfiles  libcocaine-boost-mt.patch
for-zbr/: test.cpp  test_app@1
for-zbr/package/: manifest.json
for-zbr/test_cocaine_app/: __init__.py
foreign/jsoncpp-0.6.0-rc2/: SConstruct
include/: auto_uuid.hpp  birth_control.hpp  common.hpp  config.hpp  core.hpp  digest.hpp  drivers.hpp  eblob_storage.hpp  engine.hpp  engines.hpp  file_storage.hpp  future.hpp  id.hpp  json_socket.hpp  loadavg.hpp  mysql.hpp  networking.hpp  persistance.hpp  plugin.hpp  registry.hpp  schedulers.hpp  security.hpp  sockets.hpp  source.hpp  storage.hpp  threading.hpp  uri.hpp
include/cocaine/: actor.hpp  app.hpp  archive.hpp  asio.hpp  atomic.hpp  auth.hpp  backends.hpp  birth_control.hpp  bootstrap.hpp  cached.hpp  channel.hpp  client.hpp  common.hpp  config.hpp  context.hpp  core.hpp  defaults.hpp  deferred.hpp  dispatch.hpp  downloads.hpp  drivers.hpp  dynamic.hpp  engine.hpp  errors.hpp  events.hpp  exceptions.hpp  format.hpp  forwards.hpp  future.hpp  io.hpp  job.hpp  json.hpp  lines.hpp  locked_ptr.hpp  logging.hpp  manifest.hpp  master.hpp  memory.hpp  messages.hpp  messaging.hpp  (+35 more)
include/detail/: abstract.hpp  eblobs.hpp  files.hpp  mongo.hpp  void.hpp
include/helpers/: auto_uuid.hpp  birth_control.hpp  lock_file.hpp  pid_file.hpp  track.hpp  uri.hpp
include/security/: digest.hpp  signatures.hpp
include/storage/: abstract.hpp  eblobs.hpp  files.hpp  mongo.hpp  void.hpp
include/storages/: eblobs.hpp  files.hpp  mongo.hpp  void.hpp
modules/: CMakeLists.txt
modules/eblob/: CMakeLists.txt  eblob.cpp  eblob.hpp
modules/http/: http.cpp
modules/javascript/: CMakeLists.txt  javascript.cpp
modules/mongo/: CMakeLists.txt  mongo.cpp  mongo.hpp
modules/mysql/: CMakeLists.txt  mysql.cpp
modules/perl/: CMakeLists.txt  perl.cpp
modules/python/: CMakeLists.txt  io.cpp  io.hpp  log.cpp  log.hpp  objects.hpp  python.cpp  python.hpp
perl_dealer/: Makefile.PL  cocaine_dealer.xs  perlobject.map  ppport.h  test.pl  typemap
perl_dealer/lib/: cocaine_dealer.pm
plugins/: CMakeLists.txt  build.sh  plugin-template.cpp  plugin.cpp  sconscript
plugins/binary/: CMakeLists.txt  (+2 more)
plugins/eblob/: CMakeLists.txt  eblob.cpp  eblob.hpp
plugins/elliptics/: CMakeLists.txt  elliptics.cpp  elliptics.hpp
plugins/http/: CMakeLists.txt  http.cpp  sconscript
plugins/inject/: CMakeLists.txt  inject.cpp  sconscript
plugins/javascript/: CMakeLists.txt  javascript.cpp
plugins/mysql/: CMakeLists.txt  mysql.cpp  sconscript
plugins/perl/: CMakeLists.txt  perl.cpp
plugins/perl/tests/: main.cpp
plugins/python/: CMakeLists.txt  io.cpp  io.hpp  log.cpp  log.hpp  objects.hpp  python.cpp  python.hpp  sconscript  store.cpp  store.hpp  track.hpp
plugins/python/framework/: CMakeLists.txt  MANIFEST.in  invoke_distutils.cmake  setup.py
plugins/python/framework/cmake/: invoke_distutils.cmake
plugins/python/include/: common.hpp  python+json.hpp  python+raw.hpp  python+wsgi.hpp  python.hpp  storage.hpp  wsgi.hpp
plugins/python/src/: common.cpp  python+json.cpp  python+raw.cpp  python+wsgi.cpp  python.cpp  storage.cpp  wsgi.cpp
scripts/: cocaine-check-app.py  cocaine-engine-create.py  cocaine-engine-status.py  cocaine-info.py  cocaine-pause-app.py  cocaine-start-app.py  cocaine-tool.py  yappi-subscribe.py  yappi-unsubscribe.py
src/: acceptor.cpp  actor.cpp  actor_unix.cpp  api.cpp  app.cpp  archive.cpp  auth.cpp  bootstrap.cpp  chamber.cpp  chamber.hpp  config.cpp  context.cpp  core.cpp  crypto.cpp  decoder.cpp  defaults.cpp  deferred.cpp  digest.cpp  dispatch.cpp  downloads.cpp  dynamic.cpp  eblob_storage.cpp  encoder.cpp  engine.cpp  engines.cpp  errors.cpp  essentials.cpp  exceptions.cpp  file_storage.cpp  future.cpp  group.cpp  header.cpp  io.cpp  job.cpp  lines.cpp  locator.cpp  logging.cpp  main.cpp  manifest.cpp  master.cpp  (+32 more)
syslog-ng/: cocained.conf
tests/: CMakeLists.txt  app_inc_m.pl  benchmark.cpp  config_example.json  dealer_test_app.cpp  hosts  library_config.json  library_test.cpp  main.cpp  test.pl  test_storage.rb  tests.cpp
tests/ci/: travis.sh
tests/cmake/: CodeCoverage.cmake  Compiler.cmake  DownloadGoogleTesting.cmake
tests/unit/: context.cpp  format.cpp  header.cpp  header_table.cpp  lexical_cast.cpp  main.cpp  protocol.cpp  test_idl.hpp  uuid.cpp
tools/: CMakeLists.txt  cocaine-engine-create.py  cocaine-engine-delete.py  cocaine-info.py  tool.cpp
toolset/: CMakeLists.txt  sconscript
toolset/cocaine/: do.py
toolset/yappi/: blocks.py  do.py
(+800 files in other folders)
