LOCATE_LIBRARY(LIBMYSQL WARNING "mysql.h" "mysqlclient" "mysql")

IF(NOT LIBMYSQL_INCLUDE_DIRS OR NOT LIBMYSQL_LIBRARY_DIRS)
    RETURN()
ENDIF()

INCLUDE_DIRECTORIES(${LIBMYSQL_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBMYSQL_LIBRARY_DIRS})

ADD_LIBRARY(yappi-plugin-mysql MODULE
    mysql.cpp)

TARGET_LINK_LIBRARIES(yappi-plugin-mysql
    crypto
    mysqlclient
    uriparser)

INSTALL(TARGETS yappi-plugin-mysql
    LIBRARY DESTINATION lib/yappi
    COMPONENT runtime)
